--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,12 +5,10 @@ on:
     branches: [ "master" ]
 
 jobs:
-  greet:
-    # The type of runner that the job will run on
+  doxygen:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+    - uses: actions/checkout@v3
+    - name: Installing Doxygen
+      run: apt-get update
