--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,4 +11,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Installing Doxygen
-      run: sudo apt-get update
+      run: |
+        sudo apt-get update && \
+        sudo apt-get install -y --no-install-recommends doxygen
