--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,3 +14,6 @@ jobs:
       run: |
         sudo apt-get update && \
         sudo apt-get install -y --no-install-recommends doxygen
+
+    - name: Building Doxygen
+      run: echo "$PWD"
