--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,3 +17,9 @@ jobs:
 
     - name: Building Doxygen
       run: doxygen docs/doxygen.cfg
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: doxygen-site
+        path: ./build
