--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,8 +18,27 @@ jobs:
     - name: Building Doxygen
       run: doxygen docs/doxygen.cfg
 
-    - name: Upload a Build Artifact
+    - name: Upload Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
         name: doxygen-site
         path: __html/doxygen
+
+  deploy:
+    environment:
+      name: doxygen-site
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
