--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -12,17 +12,14 @@ permissions:
 jobs:
   doxygen:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Installing Doxygen
       run: |
         sudo apt-get update && \
         sudo apt-get install -y --no-install-recommends doxygen graphviz
-
     - name: Building Doxygen
       run: doxygen docs/doxygen.cfg
-
     - name: Upload Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
@@ -31,7 +28,7 @@ jobs:
 
   deploy:
     environment:
-      name: github-pages
+      name: doxygen-site
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
@@ -42,7 +39,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload entire repository
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
