--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,9 +11,6 @@ permissions:
 
 jobs:
   doxygen:
-    environment:
-      name: doxygen-site
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -28,6 +25,16 @@ jobs:
       with:
         name: doxygen-site
         path: __html/doxygen
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v2
+
+  deploy:
+    needs: doxygen
+    environment:
+      name: doxygen-site
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
