--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,7 +10,7 @@ permissions:
   id-token: write
 
 jobs:
-  doxygen:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -18,23 +18,24 @@ jobs:
       run: |
         sudo apt-get update && \
         sudo apt-get install -y --no-install-recommends doxygen graphviz
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
     - name: Building Doxygen
       run: doxygen docs/doxygen.cfg
     - name: Upload Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
         name: doxygen-site
-        path: __html/doxygen
+        path: ./__html/doxygen
 
+  # Deployment job
   deploy:
-    needs: doxygen
     environment:
       name: doxygen-site
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
